<resources>
    <string name="app_name">The Protectors</string>
    <string name="action_settings">Settings</string>
    <string name="emergency_contact">EMERGENCY CONTACT</string>
    <string name="no_primcontact">You don\'t have an emergency contact set</string>
    <string name="add_first_primcontact">add emergency contact</string>
    <string name="action_notifications">notifications</string>
    <string name="start_my_ride">TAP TO START RIDE</string>
    <string name="end_my_ride">END MY RIDE</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="crash_detected_title">Are You Okay?</string>
    <string name="im_okay">I\'m okay</string>
    <string name="i_need_help">I need help</string>
</resources>
