<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/main_background"
    style="@style/Theme.AppCompat.DayNight">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Protectors"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Protectors"
                android:textAlignment="center">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/menu_navigation" />

    <android.support.design.widget.NavigationView
        android:id="@+id/notifications_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/notifications" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="15"
        android:rowCount="15"
        android:orientation="horizontal"
        android:layout_toStartOf="@+id/primcontact_change"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/primcontact_change" >

        <RelativeLayout
            android:id="@+id/start_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:gravity="center">

            <com.theprotectors.theprotectors.CircularTextView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                app:top="40"
                app:bottom="755"
                app:right="810"
                app:left="95"
                app:startAngle="-175"
                app:sweepAngle="180"
                app:text="@string/start_my_ride"
                app:textSize="18sp"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/start_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/start_button"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:layout_alignParentBottom="true"
                style="?android:attr/borderlessButtonStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/stop_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <com.theprotectors.theprotectors.CircularTextView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                app:top="40"
                app:bottom="755"
                app:right="810"
                app:left="95"
                app:startAngle="-45"
                app:sweepAngle="180"
                app:text="@string/end_my_ride"
                app:textSize="18sp"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/stop_button"
                android:gravity="center_vertical|center_horizontal"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true" >


                <TextView
                    android:id="@+id/primcontact_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="left"
                    android:text="@string/emergency_contact"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"  />

                <TextView
                    android:id="@+id/no_primcontact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_primcontact"
                    android:layout_gravity="left"
                    android:layout_alignParentTop="true"
                    android:visibility="gone"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="go to activiy"
                android:onClick="openAct"/>


            <TextView
                android:id="@+id/primcontact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primcontact_label"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20dp"
                android:text="Lilly Allen"
                android:padding="20dp" />

            <Button
                android:id="@+id/add_first_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_first_primcontact"
                android:layout_below="@+id/no_primcontact"
                android:visibility="gone"
                android:padding="20dp" />

            <Button
                android:id="@+id/primcontact_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="change"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/primcontact_label"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:backgroundTint="@color/colorPrimary" />

        </RelativeLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_directions_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:id="@+id/imageButton" />

        <Button
            android:text="Dangerous place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_alignParentStart="true"
            android:id="@+id/button6" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>